# python-webapp-template

./: .prettierrc  README.md  app.db  database.py  justfile  main.py  model.py  package-lock.json  pyproject.toml
templates/: base.html  error.html  index.html
