[project]
name = "python-webapp-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "jinja2-fragments>=1.6.0",
    "jinja2>=3.1.4",
    "logfire>=2.1.2",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.17",
    "uvicorn>=0.32.0",
]
